--- a/.github/workflows/minify-js.yml
+++ b/.github/workflows/minify-js.yml
@@ -30,9 +30,11 @@ jobs:
 
       # 5. Commit and push the minified file
       - name: Commit and push minified file
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} # Use the secret token here
         run: |
           git config user.name "Sadegh Akbari"
-          git config user.email "akbarisadegh382@gmail.com"
-          git add simple-script.min.js
+          git config user.email "actions@github.com"
+          git add your-script.min.js
           git commit -m "Add minified JS file [skip ci]" || echo "No changes to commit"
-          git push
+          git push https://Sadegh1379:${{ secrets.GH_TOKEN }}@github.com/sadegh1379/CRN-scripts.git master
