--- a/.github/workflows/minify-js.yml
+++ b/.github/workflows/minify-js.yml
@@ -35,6 +35,6 @@ jobs:
         run: |
           git config user.name "Sadegh Akbari"
           git config user.email "actions@github.com"
-          git add your-script.min.js
+          git add simple-script.min.js
           git commit -m "Add minified JS file [skip ci]" || echo "No changes to commit"
           git push https://Sadegh1379:${{ secrets.GH_TOKEN }}@github.com/sadegh1379/CRN-scripts.git master
