--- a/.github/workflows/minify-js.yml
+++ b/.github/workflows/minify-js.yml
@@ -31,10 +31,10 @@ jobs:
       # 5. Commit and push the minified file
       - name: Commit and push minified file
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} # Use the secret token here
+          GITHUB_TOKEN: ${{ secrets.GH_CDN_TOKEN }} # Use the secret token here
         run: |
           git config user.name "Sadegh Akbari"
           git config user.email "actions@github.com"
           git add simple-script.min.js
           git commit -m "Add minified JS file [skip ci]" || echo "No changes to commit"
-          git push https://Sadegh1379:${{ secrets.GH_TOKEN }}@github.com/sadegh1379/CRN-scripts.git master
+          git push https://Sadegh1379:${{ secrets.GH_CDN_TOKEN }}@github.com/sadegh1379/CRN-scripts.git master
