--- a/.github/workflows/minify-js.yml
+++ b/.github/workflows/minify-js.yml
@@ -30,11 +30,7 @@ jobs:
 
       # 5. Commit and push the minified file
       - name: Commit and push minified file
-        env:
-          GH_CDN_TOKEN: ${{ secrets.GH_CDN_TOKEN }} # Use the secret token here
         run: |
-          git config user.name "Sadegh Akbari"
-          git config user.email "actions@github.com"
           git add simple-script.min.js
-          git commit -m "Add minified JS file [skip ci]" || echo "No changes to commit"
-          git push https://Sadegh1379:${{ secrets.GH_CDN_TOKEN }}@github.com/sadegh1379/CRN-scripts.git master
+          git commit -m "Add minified JS file"
+          git push origin master
